deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: backend-image
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /api/
              port: http
          readinessProbe:
            httpGet:
              path: /api/
              port: http
          startupProbe:
            httpGet:
              path: /api/
              port: http
            failureThreshold: 30
            periodSeconds: 10
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: backend-data
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
      - name: http
        protocol: TCP
        port: 80
        targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: frontend-image
          resources:
            limits:
              memory: 1024Mi
              cpu: 500m
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 10
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
      - name: http
        protocol: TCP
        port: 80
        targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-images
spec:
  selector:
    matchLabels:
      app: nginx-images
  template:
    metadata:
      labels:
        app: nginx-images
    spec:
      containers:
        - name: nginx-images
          image: nginx:1.21.1-alpine
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 10
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: images
              mountPath: /data
            - name: config
              mountPath: /etc/nginx
      volumes:
        - name: images
          persistentVolumeClaim:
            claimName: backend-data
        - name: config
          configMap:
            name: nginx-images
---
apiVersion: v1
kind: Service
metadata:
  name: images
spec:
  selector:
    app: nginx-images
  ports:
      - name: http
        protocol: TCP
        port: 80
        targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              name: http
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              name: http
      - path: /images
        pathType: Prefix
        backend:
          service:
            name: images
            port:
              name: http
